packages/next-swc/crates/next-custom-transforms/tests/errors/react-server-components/client-graph/use-client/input.js
import 'react'

// prettier-ignore
'use client'

export default function () {
  return null
}
